8252871: fatal error: must own lock JvmtiThreadState_lock 8252816: JvmtiEnvThreadState::clear_to_frame_pop() is not used

Reviewed-by: ysuenaga, dholmes