src/hotspot/share/prims/jvmtiEnvThreadState.cpp
@@ -230,17 +230,6 @@ void JvmtiEnvThreadState::clear_frame_pop(int frame_number) {
 }
 
 
-void JvmtiEnvThreadState::clear_to_frame_pop(int frame_number)  {
-#ifdef ASSERT
-  Thread *current = Thread::current();
-#endif
-  assert(get_thread() == current || current == get_thread()->active_handshaker(),
-         "frame pop data only accessible from same thread or direct handshake");
-  JvmtiFramePop fpop(frame_number);
-  JvmtiEventController::clear_to_frame_pop(this, fpop);
-}
-
-
 bool JvmtiEnvThreadState::is_frame_pop(int cur_frame_number) {
 #ifdef ASSERT
   Thread *current = Thread::current();
